# NSH2026-ACM

./: .env.example  .gitignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  REFACTORING_SUMMARY.md  alembic.ini  benchmark.py  benchmark_results.md  isspasses.json  main.py  pyproject.toml  requirements.txt  test_physics.py
.cache/tle/: 25544.txt  active.txt
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 001_add_historical_conjunction_and_debris_density.py
api/: __init__.py  main.py  models.py
backend/: __init__.py  auth.py  cache.py  config.py  database.py  debug_engine.py  debug_path.py  debug_sig.py  loader.py  logging_config.py  main.py  middleware.py  models.py  rate_limit.py  requirements.txt  state_manager.py  tle_ingest.py  tle_scheduler.py
backend/core/: __init__.py  auto_cola.py  autonomy_logic.py  conjunction.py  decision_service.py  ground_station.py  maneuver_planner.py  models.py  navigation.py  physics.py  physics_bridge.py  screening.py  state_manager.py  station_keeping.py  tle_handler.py
backend/core/physics/: __init__.py  constants.py  engine.py  fallback.py  loader.py
backend/cpp/: CMakeLists.txt  conjunction.cpp  conjunction.h  fuel.cpp  fuel.h  maneuver.cpp  maneuver.h  propagator.cpp  propagator.h  propogator.cpp  propogator.h
backend/routers/: __init__.py  auth.py  celery_monitor.py  data_analysis.py  export.py  history.py  maneuver.py  maneuvers.py  propagation.py  rulebook_api.py  simulate.py  simulations.py  telemetry.py  tle.py  visualization.py
backend/services/: comms_service.py  conjunction_service.py  decision_service.py  fleet_service.py  maneuver_service.py  simulation_service.py
benchmarks/: benchmark.py
cpp/: CMakeLists.txt  conjunction.cpp  conjunction.h  cuda_bridge.h  cuda_conjunction.cu  cuda_physics.cuh  cuda_propagator.cu  fuel.cpp  fuel.h  maneuver.cpp  physics_constants.h  propagator.cpp  propagator.h
data/: catalog.json  initial_debris.json  initial_satellites.json
docs/: architecture.md  contributing.md  design.md  limitations.md  performance.md  profiling.md  validation.md
engine/: __init__.py  analysis.py  cli.py  constants.py  data.py  exceptions.py  frames.py  simulation.py  visibility.py  viz.py
engine/core/: __init__.py  accelerator.py  conjunction.py  ephemeris.py  fuel.py  maneuver.py  propagator.py
engine/geo/: __init__.py  analysis.py  frames.py  visibility.py
engine/io/: __init__.py  data.py
engine/physics/: __init__.py  accelerator.py  conjunction.py  fuel.py  maneuver.py  propagator.py
frontend/: app.js  bullseye.js  camera.py  fuel.js  gantt.js  globe.py  groundtrack.js  hud.py  index.html  main.py  scene.py  shaders.py  style.css
frontend/css/: animations.css  footer.css  header.css  layout.css  list-items.css  main.css  modal.css  overlay.css  panels.css  reset.css  vars.css  widgets.css
frontend/js/: alerts.js  api.js  bullseye.js  constants.js  drawer.js  events.js  fuel.js  gantt.js  globe.js  groundTrack.js  main.js  speedControl.js  state.js  telemetry.js  viewMode.js  ws_telemetry.js
frontend/js/components/: bullseye.js  fuel-grid.js  gantt.js  maneuvers.js  map.js
frontend/js/renderers/: cdm-list.js  header.js  history-list.js
frontend/js/utils/: dom.js
scripts/: build.sh  check_backend.py  generate_initial_state.py  init_db.py  profile_cuda.py
tests/: test_correctness.py  test_performance.py  test_transforms.py
validation/: __init__.py  cuda_roofline.py  scaling_analysis.py  sgp4_vs_rk4.py  test_monte_carlo.py  validate_physics.py
