[build-system]
requires = ["pybind11>=2.10.0", "setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrosis"
version = "0.2.0"
description = "GPU-Accelerated Orbital Propagation and Conjunction Analysis Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "pybind11>=2.10.0",
    "httpx>=0.27.0",
    "sgp4>=2.23",
]

[project.urls]
Source = "https://github.com/anomalyco/astrosis"
Documentation = "https://github.com/anomalyco/astrosis/tree/main/docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
