[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "astrosis"
version = "0.1.0"
description = "Orbital mechanics engine for space situational awareness"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "httpx>=0.27.0",
    "sgp4>=2.23",
]
